[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unsloth-production-pipeline"
version = "0.1.0"
description = "Production MLOps pipeline: data prep → Unsloth fine-tuning → evaluation → serving"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "huggingface-hub>=0.22.0",
    "evaluate>=0.4.0",
    "accelerate>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
